--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.462.0",
     "next": "14.2.16",
     "react": "^18",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
